padding, scrollbar fixed

--- a/prism.css
+++ b/prism.css
@@ -98,7 +98,7 @@ pre[class*="language-"] {
 }
 pre[class*="language-"].line-numbers {
   position: relative;
-  padding-left: 3.8em;
+  padding-left: 2.5em;
   counter-reset: linenumber;
 }
 pre[class*="language-"].line-numbers > code {
